some more thread tweaking. surefire "fork always" the fix?